// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlePreview
    article={
        Object {
            "authorEmail": "foo",
            "authorName": "foo",
            "content": "foo",
            "contentHtml": "foo",
            "cursor": "foo",
            "handle": "foo",
            "id": "foo",
            "image": "foo",
            "publishedAt": "foo",
            "tags": Array [
              "foo",
            ],
            "title": "foo",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Button
          childrenWrapperClassName=""
          className=""
          color="white-denim"
          disabled={false}
          fullWidth={false}
          hover="shadow"
          label=""
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          openInCurrentTab={false}
          shadow={false}
          to="/news/foo"
          type="button"
          variant="style-none"
>
          <div
                    className="col-12 aspect-4-3 absolute"
                    style={
                              Object {
                                        "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                    }
          />
</Button>,
        <div
          className="text-container-width"
>
          <Button
                    childrenWrapperClassName=""
                    className=""
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    openInCurrentTab={false}
                    shadow={false}
                    to="/news/foo"
                    type="button"
                    variant="style-none"
          >
                    <h2
                              className="bold my2 text-madison-blue avenir"
                    >
                              foo
                    </h2>
          </Button>
          <p
                    className="detail text-peach semi-bold mb3"
          >
                    foo
          </p>
          <div
                    className=""
          >
                    <p
                              className="block-subheadline"
                    >
                              foo...
                    </p>
                    <div
                              className="flex flex-row my3"
                    >
                              <Button
                                        childrenWrapperClassName=""
                                        className="mr2"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Read More"
                                        onClick={[Function]}
                                        onMouseLeave={[Function]}
                                        onMouseOver={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to="/news/foo"
                                        type="button"
                                        variant="primary-small"
                              />
                              <CreatedButton
                                        url="http://localhost//foo"
                                        windowHeight={400}
                                        windowWidth={550}
                              >
                                        <Button
                                                  childrenWrapperClassName=""
                                                  className=""
                                                  color="white-madison-blue-border"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label="Share"
                                                  onClick={[Function]}
                                                  onMouseLeave={[Function]}
                                                  onMouseOver={[Function]}
                                                  openInCurrentTab={false}
                                                  shadow={false}
                                                  to=""
                                                  type="button"
                                                  variant="primary-small"
                                        />
                              </CreatedButton>
                    </div>
          </div>
</div>,
      ],
      "className": "px2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            className="col-12 aspect-4-3 absolute"
            style={
                        Object {
                                    "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "cover",
                                  }
            }
/>,
          "childrenWrapperClassName": "",
          "className": "",
          "color": "white-denim",
          "disabled": false,
          "fullWidth": false,
          "hover": "shadow",
          "label": "",
          "onClick": [Function],
          "onMouseLeave": [Function],
          "onMouseOver": [Function],
          "openInCurrentTab": false,
          "shadow": false,
          "to": "/news/foo",
          "type": "button",
          "variant": "style-none",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12 aspect-4-3 absolute",
            "style": Object {
              "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "cover",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              childrenWrapperClassName=""
              className=""
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              openInCurrentTab={false}
              shadow={false}
              to="/news/foo"
              type="button"
              variant="style-none"
>
              <h2
                            className="bold my2 text-madison-blue avenir"
              >
                            foo
              </h2>
</Button>,
            <p
              className="detail text-peach semi-bold mb3"
>
              foo
</p>,
            <div
              className=""
>
              <p
                            className="block-subheadline"
              >
                            foo...
              </p>
              <div
                            className="flex flex-row my3"
              >
                            <Button
                                          childrenWrapperClassName=""
                                          className="mr2"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="Read More"
                                          onClick={[Function]}
                                          onMouseLeave={[Function]}
                                          onMouseOver={[Function]}
                                          openInCurrentTab={false}
                                          shadow={false}
                                          to="/news/foo"
                                          type="button"
                                          variant="primary-small"
                            />
                            <CreatedButton
                                          url="http://localhost//foo"
                                          windowHeight={400}
                                          windowWidth={550}
                            >
                                          <Button
                                                        childrenWrapperClassName=""
                                                        className=""
                                                        color="white-madison-blue-border"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label="Share"
                                                        onClick={[Function]}
                                                        onMouseLeave={[Function]}
                                                        onMouseOver={[Function]}
                                                        openInCurrentTab={false}
                                                        shadow={false}
                                                        to=""
                                                        type="button"
                                                        variant="primary-small"
                                          />
                            </CreatedButton>
              </div>
</div>,
          ],
          "className": "text-container-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <h2
                className="bold my2 text-madison-blue avenir"
>
                foo
</h2>,
              "childrenWrapperClassName": "",
              "className": "",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseLeave": [Function],
              "onMouseOver": [Function],
              "openInCurrentTab": false,
              "shadow": false,
              "to": "/news/foo",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "bold my2 text-madison-blue avenir",
              },
              "ref": null,
              "rendered": "foo",
              "type": "h2",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "foo",
              "className": "detail text-peach semi-bold mb3",
            },
            "ref": null,
            "rendered": "foo",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="block-subheadline"
>
                  foo...
</p>,
                <div
                  className="flex flex-row my3"
>
                  <Button
                                    childrenWrapperClassName=""
                                    className="mr2"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Read More"
                                    onClick={[Function]}
                                    onMouseLeave={[Function]}
                                    onMouseOver={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to="/news/foo"
                                    type="button"
                                    variant="primary-small"
                  />
                  <CreatedButton
                                    url="http://localhost//foo"
                                    windowHeight={400}
                                    windowWidth={550}
                  >
                                    <Button
                                                      childrenWrapperClassName=""
                                                      className=""
                                                      color="white-madison-blue-border"
                                                      disabled={false}
                                                      fullWidth={false}
                                                      hover="shadow"
                                                      label="Share"
                                                      onClick={[Function]}
                                                      onMouseLeave={[Function]}
                                                      onMouseOver={[Function]}
                                                      openInCurrentTab={false}
                                                      shadow={false}
                                                      to=""
                                                      type="button"
                                                      variant="primary-small"
                                    />
                  </CreatedButton>
</div>,
              ],
              "className": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo...",
                  "className": "block-subheadline",
                },
                "ref": null,
                "rendered": "foo...",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Button
                      childrenWrapperClassName=""
                      className="mr2"
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="Read More"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      openInCurrentTab={false}
                      shadow={false}
                      to="/news/foo"
                      type="button"
                      variant="primary-small"
/>,
                    <CreatedButton
                      url="http://localhost//foo"
                      windowHeight={400}
                      windowWidth={550}
>
                      <Button
                                            childrenWrapperClassName=""
                                            className=""
                                            color="white-madison-blue-border"
                                            disabled={false}
                                            fullWidth={false}
                                            hover="shadow"
                                            label="Share"
                                            onClick={[Function]}
                                            onMouseLeave={[Function]}
                                            onMouseOver={[Function]}
                                            openInCurrentTab={false}
                                            shadow={false}
                                            to=""
                                            type="button"
                                            variant="primary-small"
                      />
</CreatedButton>,
                  ],
                  "className": "flex flex-row my3",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "childrenWrapperClassName": "",
                      "className": "mr2",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "Read More",
                      "onClick": [Function],
                      "onMouseLeave": [Function],
                      "onMouseOver": [Function],
                      "openInCurrentTab": false,
                      "shadow": false,
                      "to": "/news/foo",
                      "type": "button",
                      "variant": "primary-small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": <Button
                        childrenWrapperClassName=""
                        className=""
                        color="white-madison-blue-border"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Share"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="primary-small"
/>,
                      "url": "http://localhost//foo",
                      "windowHeight": 400,
                      "windowWidth": 550,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "",
                        "color": "white-madison-blue-border",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "Share",
                        "onClick": [Function],
                        "onMouseLeave": [Function],
                        "onMouseOver": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "primary-small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Button
            childrenWrapperClassName=""
            className=""
            color="white-denim"
            disabled={false}
            fullWidth={false}
            hover="shadow"
            label=""
            onClick={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            openInCurrentTab={false}
            shadow={false}
            to="/news/foo"
            type="button"
            variant="style-none"
>
            <div
                        className="col-12 aspect-4-3 absolute"
                        style={
                                    Object {
                                                "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                        }
            />
</Button>,
          <div
            className="text-container-width"
>
            <Button
                        childrenWrapperClassName=""
                        className=""
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="/news/foo"
                        type="button"
                        variant="style-none"
            >
                        <h2
                                    className="bold my2 text-madison-blue avenir"
                        >
                                    foo
                        </h2>
            </Button>
            <p
                        className="detail text-peach semi-bold mb3"
            >
                        foo
            </p>
            <div
                        className=""
            >
                        <p
                                    className="block-subheadline"
                        >
                                    foo...
                        </p>
                        <div
                                    className="flex flex-row my3"
                        >
                                    <Button
                                                childrenWrapperClassName=""
                                                className="mr2"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Read More"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to="/news/foo"
                                                type="button"
                                                variant="primary-small"
                                    />
                                    <CreatedButton
                                                url="http://localhost//foo"
                                                windowHeight={400}
                                                windowWidth={550}
                                    >
                                                <Button
                                                            childrenWrapperClassName=""
                                                            className=""
                                                            color="white-madison-blue-border"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label="Share"
                                                            onClick={[Function]}
                                                            onMouseLeave={[Function]}
                                                            onMouseOver={[Function]}
                                                            openInCurrentTab={false}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="primary-small"
                                                />
                                    </CreatedButton>
                        </div>
            </div>
</div>,
        ],
        "className": "px2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="col-12 aspect-4-3 absolute"
              style={
                            Object {
                                          "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "cover",
                                        }
              }
/>,
            "childrenWrapperClassName": "",
            "className": "",
            "color": "white-denim",
            "disabled": false,
            "fullWidth": false,
            "hover": "shadow",
            "label": "",
            "onClick": [Function],
            "onMouseLeave": [Function],
            "onMouseOver": [Function],
            "openInCurrentTab": false,
            "shadow": false,
            "to": "/news/foo",
            "type": "button",
            "variant": "style-none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "col-12 aspect-4-3 absolute",
              "style": Object {
                "background": "url(foo?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "cover",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                childrenWrapperClassName=""
                className=""
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to="/news/foo"
                type="button"
                variant="style-none"
>
                <h2
                                className="bold my2 text-madison-blue avenir"
                >
                                foo
                </h2>
</Button>,
              <p
                className="detail text-peach semi-bold mb3"
>
                foo
</p>,
              <div
                className=""
>
                <p
                                className="block-subheadline"
                >
                                foo...
                </p>
                <div
                                className="flex flex-row my3"
                >
                                <Button
                                                childrenWrapperClassName=""
                                                className="mr2"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Read More"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to="/news/foo"
                                                type="button"
                                                variant="primary-small"
                                />
                                <CreatedButton
                                                url="http://localhost//foo"
                                                windowHeight={400}
                                                windowWidth={550}
                                >
                                                <Button
                                                                childrenWrapperClassName=""
                                                                className=""
                                                                color="white-madison-blue-border"
                                                                disabled={false}
                                                                fullWidth={false}
                                                                hover="shadow"
                                                                label="Share"
                                                                onClick={[Function]}
                                                                onMouseLeave={[Function]}
                                                                onMouseOver={[Function]}
                                                                openInCurrentTab={false}
                                                                shadow={false}
                                                                to=""
                                                                type="button"
                                                                variant="primary-small"
                                                />
                                </CreatedButton>
                </div>
</div>,
            ],
            "className": "text-container-width",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <h2
                  className="bold my2 text-madison-blue avenir"
>
                  foo
</h2>,
                "childrenWrapperClassName": "",
                "className": "",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseLeave": [Function],
                "onMouseOver": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "/news/foo",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "foo",
                  "className": "bold my2 text-madison-blue avenir",
                },
                "ref": null,
                "rendered": "foo",
                "type": "h2",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "foo",
                "className": "detail text-peach semi-bold mb3",
              },
              "ref": null,
              "rendered": "foo",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="block-subheadline"
>
                    foo...
</p>,
                  <div
                    className="flex flex-row my3"
>
                    <Button
                                        childrenWrapperClassName=""
                                        className="mr2"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Read More"
                                        onClick={[Function]}
                                        onMouseLeave={[Function]}
                                        onMouseOver={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to="/news/foo"
                                        type="button"
                                        variant="primary-small"
                    />
                    <CreatedButton
                                        url="http://localhost//foo"
                                        windowHeight={400}
                                        windowWidth={550}
                    >
                                        <Button
                                                            childrenWrapperClassName=""
                                                            className=""
                                                            color="white-madison-blue-border"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label="Share"
                                                            onClick={[Function]}
                                                            onMouseLeave={[Function]}
                                                            onMouseOver={[Function]}
                                                            openInCurrentTab={false}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="primary-small"
                                        />
                    </CreatedButton>
</div>,
                ],
                "className": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "foo...",
                    "className": "block-subheadline",
                  },
                  "ref": null,
                  "rendered": "foo...",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Button
                        childrenWrapperClassName=""
                        className="mr2"
                        color="madison-blue"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Read More"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="/news/foo"
                        type="button"
                        variant="primary-small"
/>,
                      <CreatedButton
                        url="http://localhost//foo"
                        windowHeight={400}
                        windowWidth={550}
>
                        <Button
                                                childrenWrapperClassName=""
                                                className=""
                                                color="white-madison-blue-border"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Share"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                        />
</CreatedButton>,
                    ],
                    "className": "flex flex-row my3",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "mr2",
                        "color": "madison-blue",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "Read More",
                        "onClick": [Function],
                        "onMouseLeave": [Function],
                        "onMouseOver": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "/news/foo",
                        "type": "button",
                        "variant": "primary-small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <Button
                          childrenWrapperClassName=""
                          className=""
                          color="white-madison-blue-border"
                          disabled={false}
                          fullWidth={false}
                          hover="shadow"
                          label="Share"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          openInCurrentTab={false}
                          shadow={false}
                          to=""
                          type="button"
                          variant="primary-small"
/>,
                        "url": "http://localhost//foo",
                        "windowHeight": 400,
                        "windowWidth": 550,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": null,
                          "childrenWrapperClassName": "",
                          "className": "",
                          "color": "white-madison-blue-border",
                          "disabled": false,
                          "fullWidth": false,
                          "hover": "shadow",
                          "label": "Share",
                          "onClick": [Function],
                          "onMouseLeave": [Function],
                          "onMouseOver": [Function],
                          "openInCurrentTab": false,
                          "shadow": false,
                          "to": "",
                          "type": "button",
                          "variant": "primary-small",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticlePreview
    article={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Button
          childrenWrapperClassName=""
          className=""
          color="white-denim"
          disabled={false}
          fullWidth={false}
          hover="shadow"
          label=""
          onClick={[Function]}
          onMouseLeave={[Function]}
          onMouseOver={[Function]}
          openInCurrentTab={false}
          shadow={false}
          to="/news/undefined"
          type="button"
          variant="style-none"
>
          <div
                    className="col-12 aspect-4-3 absolute"
                    style={
                              Object {
                                        "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                        "backgroundSize": "cover",
                                      }
                    }
          />
</Button>,
        <div
          className="text-container-width"
>
          <Button
                    childrenWrapperClassName=""
                    className=""
                    color="white-denim"
                    disabled={false}
                    fullWidth={false}
                    hover="shadow"
                    label=""
                    onClick={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    openInCurrentTab={false}
                    shadow={false}
                    to="/news/undefined"
                    type="button"
                    variant="style-none"
          >
                    <h2
                              className="bold my2 text-madison-blue avenir"
                    />
          </Button>
          <p
                    className="detail text-peach semi-bold mb3"
          />
          <div
                    className=""
          >
                    <p
                              className="block-subheadline"
                    >
                              ...
                    </p>
                    <div
                              className="flex flex-row my3"
                    >
                              <Button
                                        childrenWrapperClassName=""
                                        className="mr2"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Read More"
                                        onClick={[Function]}
                                        onMouseLeave={[Function]}
                                        onMouseOver={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to="/news/undefined"
                                        type="button"
                                        variant="primary-small"
                              />
                              <CreatedButton
                                        url="http://localhost//undefined"
                                        windowHeight={400}
                                        windowWidth={550}
                              >
                                        <Button
                                                  childrenWrapperClassName=""
                                                  className=""
                                                  color="white-madison-blue-border"
                                                  disabled={false}
                                                  fullWidth={false}
                                                  hover="shadow"
                                                  label="Share"
                                                  onClick={[Function]}
                                                  onMouseLeave={[Function]}
                                                  onMouseOver={[Function]}
                                                  openInCurrentTab={false}
                                                  shadow={false}
                                                  to=""
                                                  type="button"
                                                  variant="primary-small"
                                        />
                              </CreatedButton>
                    </div>
          </div>
</div>,
      ],
      "className": "px2",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <div
            className="col-12 aspect-4-3 absolute"
            style={
                        Object {
                                    "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                    "backgroundSize": "cover",
                                  }
            }
/>,
          "childrenWrapperClassName": "",
          "className": "",
          "color": "white-denim",
          "disabled": false,
          "fullWidth": false,
          "hover": "shadow",
          "label": "",
          "onClick": [Function],
          "onMouseLeave": [Function],
          "onMouseOver": [Function],
          "openInCurrentTab": false,
          "shadow": false,
          "to": "/news/undefined",
          "type": "button",
          "variant": "style-none",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "col-12 aspect-4-3 absolute",
            "style": Object {
              "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
              "backgroundSize": "cover",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Button
              childrenWrapperClassName=""
              className=""
              color="white-denim"
              disabled={false}
              fullWidth={false}
              hover="shadow"
              label=""
              onClick={[Function]}
              onMouseLeave={[Function]}
              onMouseOver={[Function]}
              openInCurrentTab={false}
              shadow={false}
              to="/news/undefined"
              type="button"
              variant="style-none"
>
              <h2
                            className="bold my2 text-madison-blue avenir"
              />
</Button>,
            <p
              className="detail text-peach semi-bold mb3"
/>,
            <div
              className=""
>
              <p
                            className="block-subheadline"
              >
                            ...
              </p>
              <div
                            className="flex flex-row my3"
              >
                            <Button
                                          childrenWrapperClassName=""
                                          className="mr2"
                                          color="madison-blue"
                                          disabled={false}
                                          fullWidth={false}
                                          hover="shadow"
                                          label="Read More"
                                          onClick={[Function]}
                                          onMouseLeave={[Function]}
                                          onMouseOver={[Function]}
                                          openInCurrentTab={false}
                                          shadow={false}
                                          to="/news/undefined"
                                          type="button"
                                          variant="primary-small"
                            />
                            <CreatedButton
                                          url="http://localhost//undefined"
                                          windowHeight={400}
                                          windowWidth={550}
                            >
                                          <Button
                                                        childrenWrapperClassName=""
                                                        className=""
                                                        color="white-madison-blue-border"
                                                        disabled={false}
                                                        fullWidth={false}
                                                        hover="shadow"
                                                        label="Share"
                                                        onClick={[Function]}
                                                        onMouseLeave={[Function]}
                                                        onMouseOver={[Function]}
                                                        openInCurrentTab={false}
                                                        shadow={false}
                                                        to=""
                                                        type="button"
                                                        variant="primary-small"
                                          />
                            </CreatedButton>
              </div>
</div>,
          ],
          "className": "text-container-width",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": <h2
                className="bold my2 text-madison-blue avenir"
/>,
              "childrenWrapperClassName": "",
              "className": "",
              "color": "white-denim",
              "disabled": false,
              "fullWidth": false,
              "hover": "shadow",
              "label": "",
              "onClick": [Function],
              "onMouseLeave": [Function],
              "onMouseOver": [Function],
              "openInCurrentTab": false,
              "shadow": false,
              "to": "/news/undefined",
              "type": "button",
              "variant": "style-none",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "bold my2 text-madison-blue avenir",
              },
              "ref": null,
              "rendered": null,
              "type": "h2",
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": undefined,
              "className": "detail text-peach semi-bold mb3",
            },
            "ref": null,
            "rendered": null,
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="block-subheadline"
>
                  ...
</p>,
                <div
                  className="flex flex-row my3"
>
                  <Button
                                    childrenWrapperClassName=""
                                    className="mr2"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Read More"
                                    onClick={[Function]}
                                    onMouseLeave={[Function]}
                                    onMouseOver={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to="/news/undefined"
                                    type="button"
                                    variant="primary-small"
                  />
                  <CreatedButton
                                    url="http://localhost//undefined"
                                    windowHeight={400}
                                    windowWidth={550}
                  >
                                    <Button
                                                      childrenWrapperClassName=""
                                                      className=""
                                                      color="white-madison-blue-border"
                                                      disabled={false}
                                                      fullWidth={false}
                                                      hover="shadow"
                                                      label="Share"
                                                      onClick={[Function]}
                                                      onMouseLeave={[Function]}
                                                      onMouseOver={[Function]}
                                                      openInCurrentTab={false}
                                                      shadow={false}
                                                      to=""
                                                      type="button"
                                                      variant="primary-small"
                                    />
                  </CreatedButton>
</div>,
              ],
              "className": "",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "...",
                  "className": "block-subheadline",
                },
                "ref": null,
                "rendered": "...",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Button
                      childrenWrapperClassName=""
                      className="mr2"
                      color="madison-blue"
                      disabled={false}
                      fullWidth={false}
                      hover="shadow"
                      label="Read More"
                      onClick={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      openInCurrentTab={false}
                      shadow={false}
                      to="/news/undefined"
                      type="button"
                      variant="primary-small"
/>,
                    <CreatedButton
                      url="http://localhost//undefined"
                      windowHeight={400}
                      windowWidth={550}
>
                      <Button
                                            childrenWrapperClassName=""
                                            className=""
                                            color="white-madison-blue-border"
                                            disabled={false}
                                            fullWidth={false}
                                            hover="shadow"
                                            label="Share"
                                            onClick={[Function]}
                                            onMouseLeave={[Function]}
                                            onMouseOver={[Function]}
                                            openInCurrentTab={false}
                                            shadow={false}
                                            to=""
                                            type="button"
                                            variant="primary-small"
                      />
</CreatedButton>,
                  ],
                  "className": "flex flex-row my3",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": null,
                      "childrenWrapperClassName": "",
                      "className": "mr2",
                      "color": "madison-blue",
                      "disabled": false,
                      "fullWidth": false,
                      "hover": "shadow",
                      "label": "Read More",
                      "onClick": [Function],
                      "onMouseLeave": [Function],
                      "onMouseOver": [Function],
                      "openInCurrentTab": false,
                      "shadow": false,
                      "to": "/news/undefined",
                      "type": "button",
                      "variant": "primary-small",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "function",
                    "props": Object {
                      "children": <Button
                        childrenWrapperClassName=""
                        className=""
                        color="white-madison-blue-border"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Share"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="primary-small"
/>,
                      "url": "http://localhost//undefined",
                      "windowHeight": 400,
                      "windowWidth": 550,
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "",
                        "color": "white-madison-blue-border",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "Share",
                        "onClick": [Function],
                        "onMouseLeave": [Function],
                        "onMouseOver": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "",
                        "type": "button",
                        "variant": "primary-small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Button
            childrenWrapperClassName=""
            className=""
            color="white-denim"
            disabled={false}
            fullWidth={false}
            hover="shadow"
            label=""
            onClick={[Function]}
            onMouseLeave={[Function]}
            onMouseOver={[Function]}
            openInCurrentTab={false}
            shadow={false}
            to="/news/undefined"
            type="button"
            variant="style-none"
>
            <div
                        className="col-12 aspect-4-3 absolute"
                        style={
                                    Object {
                                                "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                                "backgroundSize": "cover",
                                              }
                        }
            />
</Button>,
          <div
            className="text-container-width"
>
            <Button
                        childrenWrapperClassName=""
                        className=""
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="/news/undefined"
                        type="button"
                        variant="style-none"
            >
                        <h2
                                    className="bold my2 text-madison-blue avenir"
                        />
            </Button>
            <p
                        className="detail text-peach semi-bold mb3"
            />
            <div
                        className=""
            >
                        <p
                                    className="block-subheadline"
                        >
                                    ...
                        </p>
                        <div
                                    className="flex flex-row my3"
                        >
                                    <Button
                                                childrenWrapperClassName=""
                                                className="mr2"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Read More"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to="/news/undefined"
                                                type="button"
                                                variant="primary-small"
                                    />
                                    <CreatedButton
                                                url="http://localhost//undefined"
                                                windowHeight={400}
                                                windowWidth={550}
                                    >
                                                <Button
                                                            childrenWrapperClassName=""
                                                            className=""
                                                            color="white-madison-blue-border"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label="Share"
                                                            onClick={[Function]}
                                                            onMouseLeave={[Function]}
                                                            onMouseOver={[Function]}
                                                            openInCurrentTab={false}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="primary-small"
                                                />
                                    </CreatedButton>
                        </div>
            </div>
</div>,
        ],
        "className": "px2",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <div
              className="col-12 aspect-4-3 absolute"
              style={
                            Object {
                                          "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                                          "backgroundSize": "cover",
                                        }
              }
/>,
            "childrenWrapperClassName": "",
            "className": "",
            "color": "white-denim",
            "disabled": false,
            "fullWidth": false,
            "hover": "shadow",
            "label": "",
            "onClick": [Function],
            "onMouseLeave": [Function],
            "onMouseOver": [Function],
            "openInCurrentTab": false,
            "shadow": false,
            "to": "/news/undefined",
            "type": "button",
            "variant": "style-none",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "col-12 aspect-4-3 absolute",
              "style": Object {
                "background": "url(undefined?w=900&fm=jpg&fl=progressive&q=90) no-repeat center",
                "backgroundSize": "cover",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                childrenWrapperClassName=""
                className=""
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to="/news/undefined"
                type="button"
                variant="style-none"
>
                <h2
                                className="bold my2 text-madison-blue avenir"
                />
</Button>,
              <p
                className="detail text-peach semi-bold mb3"
/>,
              <div
                className=""
>
                <p
                                className="block-subheadline"
                >
                                ...
                </p>
                <div
                                className="flex flex-row my3"
                >
                                <Button
                                                childrenWrapperClassName=""
                                                className="mr2"
                                                color="madison-blue"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Read More"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to="/news/undefined"
                                                type="button"
                                                variant="primary-small"
                                />
                                <CreatedButton
                                                url="http://localhost//undefined"
                                                windowHeight={400}
                                                windowWidth={550}
                                >
                                                <Button
                                                                childrenWrapperClassName=""
                                                                className=""
                                                                color="white-madison-blue-border"
                                                                disabled={false}
                                                                fullWidth={false}
                                                                hover="shadow"
                                                                label="Share"
                                                                onClick={[Function]}
                                                                onMouseLeave={[Function]}
                                                                onMouseOver={[Function]}
                                                                openInCurrentTab={false}
                                                                shadow={false}
                                                                to=""
                                                                type="button"
                                                                variant="primary-small"
                                                />
                                </CreatedButton>
                </div>
</div>,
            ],
            "className": "text-container-width",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <h2
                  className="bold my2 text-madison-blue avenir"
/>,
                "childrenWrapperClassName": "",
                "className": "",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseLeave": [Function],
                "onMouseOver": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "/news/undefined",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "bold my2 text-madison-blue avenir",
                },
                "ref": null,
                "rendered": null,
                "type": "h2",
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": undefined,
                "className": "detail text-peach semi-bold mb3",
              },
              "ref": null,
              "rendered": null,
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="block-subheadline"
>
                    ...
</p>,
                  <div
                    className="flex flex-row my3"
>
                    <Button
                                        childrenWrapperClassName=""
                                        className="mr2"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Read More"
                                        onClick={[Function]}
                                        onMouseLeave={[Function]}
                                        onMouseOver={[Function]}
                                        openInCurrentTab={false}
                                        shadow={false}
                                        to="/news/undefined"
                                        type="button"
                                        variant="primary-small"
                    />
                    <CreatedButton
                                        url="http://localhost//undefined"
                                        windowHeight={400}
                                        windowWidth={550}
                    >
                                        <Button
                                                            childrenWrapperClassName=""
                                                            className=""
                                                            color="white-madison-blue-border"
                                                            disabled={false}
                                                            fullWidth={false}
                                                            hover="shadow"
                                                            label="Share"
                                                            onClick={[Function]}
                                                            onMouseLeave={[Function]}
                                                            onMouseOver={[Function]}
                                                            openInCurrentTab={false}
                                                            shadow={false}
                                                            to=""
                                                            type="button"
                                                            variant="primary-small"
                                        />
                    </CreatedButton>
</div>,
                ],
                "className": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "...",
                    "className": "block-subheadline",
                  },
                  "ref": null,
                  "rendered": "...",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Button
                        childrenWrapperClassName=""
                        className="mr2"
                        color="madison-blue"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label="Read More"
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to="/news/undefined"
                        type="button"
                        variant="primary-small"
/>,
                      <CreatedButton
                        url="http://localhost//undefined"
                        windowHeight={400}
                        windowWidth={550}
>
                        <Button
                                                childrenWrapperClassName=""
                                                className=""
                                                color="white-madison-blue-border"
                                                disabled={false}
                                                fullWidth={false}
                                                hover="shadow"
                                                label="Share"
                                                onClick={[Function]}
                                                onMouseLeave={[Function]}
                                                onMouseOver={[Function]}
                                                openInCurrentTab={false}
                                                shadow={false}
                                                to=""
                                                type="button"
                                                variant="primary-small"
                        />
</CreatedButton>,
                    ],
                    "className": "flex flex-row my3",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": null,
                        "childrenWrapperClassName": "",
                        "className": "mr2",
                        "color": "madison-blue",
                        "disabled": false,
                        "fullWidth": false,
                        "hover": "shadow",
                        "label": "Read More",
                        "onClick": [Function],
                        "onMouseLeave": [Function],
                        "onMouseOver": [Function],
                        "openInCurrentTab": false,
                        "shadow": false,
                        "to": "/news/undefined",
                        "type": "button",
                        "variant": "primary-small",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "function",
                      "props": Object {
                        "children": <Button
                          childrenWrapperClassName=""
                          className=""
                          color="white-madison-blue-border"
                          disabled={false}
                          fullWidth={false}
                          hover="shadow"
                          label="Share"
                          onClick={[Function]}
                          onMouseLeave={[Function]}
                          onMouseOver={[Function]}
                          openInCurrentTab={false}
                          shadow={false}
                          to=""
                          type="button"
                          variant="primary-small"
/>,
                        "url": "http://localhost//undefined",
                        "windowHeight": 400,
                        "windowWidth": 550,
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "function",
                        "props": Object {
                          "children": null,
                          "childrenWrapperClassName": "",
                          "className": "",
                          "color": "white-madison-blue-border",
                          "disabled": false,
                          "fullWidth": false,
                          "hover": "shadow",
                          "label": "Share",
                          "onClick": [Function],
                          "onMouseLeave": [Function],
                          "onMouseOver": [Function],
                          "openInCurrentTab": false,
                          "shadow": false,
                          "to": "",
                          "type": "button",
                          "variant": "primary-small",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
